03_infrastructure/external-access/dev/prometheus/ingressroute-patch-prometheus.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  routes:
    - match: Host(`prometheus.192.168.2.105.xip.io`)
      kind: Rule
      services:
        - name: prometheus-gatekeeper
          port: 3000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-tls
spec:
  routes:
    - match: Host(`prometheus.192.168.2.105.xip.io`)
      kind: Rule
      services:
        - name: prometheus-gatekeeper
          port: 3000
